logs/localclustering.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/localclustering'...
Compiling './lib/python3.5/site-packages/localclustering/cluster.py'...
***   File "./lib/python3.5/site-packages/localclustering/cluster.py", line 46
    self._source_nodes: Dict[int, Node] = {}
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/localclustering/definitions'...
Compiling './lib/python3.5/site-packages/localclustering/definitions/connectivity.py'...
***   File "./lib/python3.5/site-packages/localclustering/definitions/connectivity.py", line 51
    self.weighting_coefficient: float = weighting_coefficient
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/localclustering/definitions/util.py'...
***   File "./lib/python3.5/site-packages/localclustering/definitions/util.py", line 33
    self.node: Node = node
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/localclustering/demo.py'...
***   File "./lib/python3.5/site-packages/localclustering/demo.py", line 26
    default_node_color: str = "#3F51B5"
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/localclustering/hierarchicalengine.py'...
***   File "./lib/python3.5/site-packages/localclustering/hierarchicalengine.py", line 45
    self._cluster: Cluster = None
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/localclustering/history.py'...
***   File "./lib/python3.5/site-packages/localclustering/history.py", line 37
    self._added_nodes: Dict[int, GainDescriptor] = {}
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/localclustering/localengine.py'...
***   File "./lib/python3.5/site-packages/localclustering/localengine.py", line 50
    self._cluster: Cluster = None
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/localclustering-0.10.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
